<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".act.RegistroUsuario">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registro de Usuario"
        android:textSize="10pt"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="7dp"
        android:padding="13dp"
        android:inputType="text"
        android:textColor="@color/black"
        android:hint="@string/campo_nombre"
        android:id="@+id/camNombre"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="7dp"
        android:padding="13dp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:hint="@string/campo_email"
        android:id="@+id/camEmail"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="7dp"
        android:padding="13dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:hint="@string/campo_password"
        android:id="@+id/camPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="7dp"
        android:padding="13dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:hint="@string/campo_confirm_password"
        android:id="@+id/camConPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegistarUsuario"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:text="@string/btnRegistro" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:text="@string/btnLogIn" />

    </LinearLayout>


</LinearLayout>