<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".act.LoginUsuario">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login de Usuario"
        android:textSize="10pt"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="7dp"
        android:padding="13dp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:hint="@string/campo_email_login"
        android:id="@+id/camEmail_login"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="7dp"
        android:padding="13dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:hint="@string/campo_password_login"
        android:id="@+id/camPassword_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogIn_Log"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:text="@string/btnLogIn"/>

        <Button
            android:id="@+id/btnRegistarUsuario_Log"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:text="@string/btnRegistro"/>

    </LinearLayout>


</LinearLayout>